<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="banner_description">Logo HamburgueriaZ</string>
    <string name="informe_nome">Informe o nome</string>
    <string name="obrigatorio">*</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="hamburguer">🍔 Hambúrguer</string>
    <string name="preco_hamburguer">R$ 20,00</string>
    <string name="adicionais">Adicionais:</string>
    <string name="bacon">Bacon +R$ 2,00</string>
    <string name="queijo">Queijo +R$ 2,00</string>
    <string name="onion_rings">Onion Rings +R$ 3,00</string>
    <string name="quantidade">Quantidade:</string>
    <string name="resumo_pedido">RESUMO DO PEDIDO</string>
    <string name="nenhum_item">Nenhum item selecionado</string>
    <string name="total">Total:</string>
    <string name="fazer_pedido">FAZER PEDIDO</string>
</resources>
